# zammad-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
skills/zammad-cli/: SKILL.md
src/: client.rs  config.rs  main.rs  output.rs  types.rs  util.rs
src/commands/: mod.rs  org.rs  system.rs  tags.rs  ticket.rs  user.rs
