[package]
name = "zammad-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for Zammad helpdesk — search/manage tickets, organizations, users"
license = "MIT"
repository = "https://github.com/omert11/zammad-cli"

[[bin]]
name = "zammad-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls", "webpki-roots"] }
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "3.1"
comfy-table = "7.2"
futures = "0.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
